@@ -3,6 +3,23 @@
 SET MCV_USERPATH=%USERPROFILE%\McIDAS-V
 SET MCV_PARAMS=%*
 
+SET MCV_DIR=%~dp0%
+
+SET CURRENT_DIR=%cd%
+
+CD %MCV_DIR%\lib
+
+SET MCV_JAR=
+FOR /F %%a IN ('DIR /b mcidasv-*.jar 2^>nul') DO SET MCV_JAR=%%a
+IF DEFINED MCV_JAR (
+    GOTO donefindingjars
+) ELSE (
+    ECHO "*** ERROR: Could not find McIDAS-V JAR file"
+    GOTO end
+)
+
+:donefindingjars
+
 REM Check for -userpath parameter
 :checkparameters
 IF '%1' == '' GOTO endparameters
@@ -31,14 +48,14 @@ IF EXIST "%USERPROFILE%\.mcidasv" (
 
 SET LOGBACK_CONFIG="%MCV_USERPATH%\logback.xml"
 
-set MCV_CLASSPATH=%CD%\;%CD%\mcv_userguide.jar;%CD%\mcidasv.jar
-
-set MCV_EXTPATH=-Djava.ext.dirs=""
-set MCV_LIBPATH=-Djava.library.path=""
+set MCV_CLASSPATH=%MCV_JAR%;%USERGUIDE_JAR%
 
 REM Get the amount of system memory
 echo Reading system configuration...
 SET SYS_MEM=0
-FOR /F %%i IN ('jre\bin\java.exe -cp mcidasv.jar edu.wisc.ssec.mcidasv.util.GetMem 2^>NUL') DO SET SYS_MEM=%%i
+FOR /F %%i IN ("%MCV_DIR%\jre\bin\java.exe" -cp %MCV_JAR% edu.wisc.ssec.mcidasv.util.GetMem 2^>NUL') DO SET SYS_MEM=%%i
 
-jre\bin\java %MCV_EXTPATH% %MCV_LIBPATH% -Dmcv.userpath="%MCV_USERPATH%" -Dlogback.configurationFile=%LOGBACK_CONFIG% -classpath "%MCV_CLASSPATH%" -da edu.wisc.ssec.mcidasv.startupmanager.StartupManager -Didv.sysmem=%SYS_MEM% -userpath "%MCV_USERPATH%" %MCV_PARAMS%
+"%MCV_DIR%\jre\bin\java" -Dmcv.userpath="%MCV_USERPATH%" -Dlogback.configurationFile=%LOGBACK_CONFIG% -classpath "%MCV_CLASSPATH%" -da edu.wisc.ssec.mcidasv.startupmanager.StartupManager -Didv.sysmem=%SYS_MEM% -userpath "%MCV_USERPATH%" %MCV_PARAMS%
+:end
+
+CD %CURRENT_DIR%
